--- a/front/style/_text.scss
+++ b/front/style/_text.scss
@@ -30,6 +30,7 @@ $text--size-extra-large: 48px;
 
     &--extra-large {
         font-size: $text--size-extra-large;
+        line-height: 1em;
     }
 
     &--italic {
@@ -56,7 +57,8 @@ $text--size-extra-large: 48px;
     }
 
     &--limited {
-        width: 550px;
+        max-width: 550px;
+        width: 100%;
     }
 
     &--all-caps {
